Makes dashboard dimensions fit properly and hides scrollbar corner issue

--- a/src/styles/_dashboard.scss
+++ b/src/styles/_dashboard.scss
@@ -23,18 +23,18 @@
   min-height: 60vh;
   gap: 1rem;
   margin-bottom: .5rem;
-  border: 1px solid white;
 }
  #diagram-container-wrapper {
   border: 1px solid $dashboard-border-boxes;
   overflow: auto;
   border-radius: 1rem;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
   overflow: hidden;
   flex: 1;
   justify-content: center;
   background-color: $diagram-background-color;
-  border: 1px solid pink;
-  width: calc(100vw - 350px - 3rem);
+  width: calc(100vw - 350px - 5rem);
   flex-grow: 2;
   height: 60vh;
 
@@ -44,6 +44,7 @@
   overflow: auto;
   height: 80%;
   padding: 0rem 1rem 1rem 1rem;
+  overflow-x: hidden;
 
  }
  #panel-wrapper {
@@ -54,11 +55,12 @@
    padding: 1rem;
    background-color: $panel-background-color;
    overflow-y: scroll;
+   overflow-x: hidden;
    border-radius: 1rem;
    display: flex;
    flex-direction: column;
+  height: 60vh;
  }
-
 
  
  #panelButton, #diagramButton, #dataButton, .block-button-wrapper {
