--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -73,6 +73,10 @@ button:active {
   text-align: center;
   animation: pulse 1s infinite;
 }
+.scroll-bar {
+  padding: 5rem;
+  border: 1 px solid red;
+}
 
 
 // media queries
